[package]
name = "test_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_plot = "0.29.0"
sysinfo = "0.32.0"

# GPU monitoring dependencies
[target.'cfg(target_os = "windows")'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
core-foundation = { version = "0.9", optional = true }
io-kit-sys = { version = "0.4", optional = true }

[features]
default = []
nvidia = ["nvml-wrapper"]
apple-gpu = ["metal", "core-foundation", "io-kit-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
