[package]
name = "system_monitor_pro"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
sysinfo = "0.32"
battery = "0.7"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
nvidia = ["nvml-wrapper"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
